# E2FL

./: .gitignore  FLManager.py  LICENSE  README.md  client.py  client_dataset.py  config.yaml  data_0_2024-06-19_15-58-45.pickle  data_0_2024-06-19_16-18-57.pickle  data_0_2024-06-19_20-39-07.pickle  data_0_2024-06-19_21-22-12.pickle  data_0_2024-06-20_15-10-29.pickle  data_0_2024-06-20_16-41-13.pickle  data_0_2024-06-21_15-23-40.pickle  data_0_2024-06-21_16-32-22.pickle  data_1_2024-06-19_15-58-45.pickle  data_1_2024-06-19_16-18-57.pickle  data_1_2024-06-19_17-04-55.pickle  data_1_2024-06-19_21-22-12.pickle  data_1_2024-06-20_15-10-29.pickle  data_1_2024-06-20_16-41-13.pickle  data_1_2024-06-20_18-05-29.pickle  data_1_2024-06-21_15-23-37.pickle  data_2024-06-04_10-02-01.pickle  data_2024-06-04_19-06-58.pickle  data_2_2024-06-19_20-39-07.pickle  data_2_2024-06-19_21-22-12.pickle  data_2_2024-06-20_16-41-13.pickle  data_2_2024-06-21_16-31-53.pickle  data_3_2024-06-19_16-18-57.pickle  data_3_2024-06-19_16-26-26.pickle  data_3_2024-06-19_17-04-56.pickle  data_3_2024-06-20_15-10-29.pickle  data_3_2024-06-20_17-41-30.pickle  fedscale_client.py  fl_info_1_mnist_2024-06-27_17-10-49.txt  fl_info_1_mnist_2025-03-25_04-56-55.txt  fl_info_1_mnist_2025-03-25_05-09-20.txt  fl_info_1_mnist_2025-03-25_05-19-50.txt  fl_info_1_mnist_2025-03-25_05-31-47.txt  (+66 more)
e2fl/: README.md  analyze_results.py  collect_logs.sh  fl_20250328_RPi5.csv  fl_20250328_jetson.csv  fl_info_2025-03-27_10-23-38_RPi5.txt  fl_info_2025-03-27_13-46-30_RPi5.txt  fl_info_2025-03-27_13-47-32_jetson.txt  fl_info_2025-03-27_13-47-34_RPi5.txt  fl_info_2025-03-27_13-50-59_RPi5.txt  fl_log_2025-03-27_10-23-38.txt  fl_log_2025-03-27_13-46-27.txt  fl_log_2025-03-27_13-47-32.txt  fl_log_2025-03-27_13-47-34.txt  fl_log_2025-03-27_13-49-15.txt  fl_log_2025-03-27_13-49-52.txt  fl_log_2025-03-27_13-50-55.txt  fl_log_2025-03-27_13-50-59.txt  power_RPi5_1743082912.9215176.csv  power_RPi5_1743083275.1148598.csv  power_RPi5_2025-03-28_014634.488238.csv  power_RPi5_2025-03-28_014657.982232.csv  power_RPi5_2025-03-28_014745.083197.csv  power_RPi5_2025-03-28_014810.164013.csv  power_RPi5_2025-03-28_014859.046601.csv  power_RPi5_2025-03-28_014924.817434.csv  power_RPi5_2025-03-28_015640.230948.csv  power_RPi5_2025-03-28_015704.585146.csv  power_RPi5_2025-03-28_015751.286886.csv  power_RPi5_2025-03-28_015904.114542.csv  power_jetson_1743082912.2959309.csv  power_jetson_1743083106.557884.csv  power_jetson_1743083273.1606193.csv  power_jetson_1743083476.3215148.csv  power_jetson_2025-03-28_014628.113308.csv  power_jetson_2025-03-28_014656.529788.csv  power_jetson_2025-03-28_014734.790394.csv  power_jetson_2025-03-28_014806.315754.csv  power_jetson_2025-03-28_014848.230425.csv  power_jetson_2025-03-28_014923.085902.csv  (+7 more)
e2fl/20250327/: 20250327_server.txt  fl_info_2025-03-27_10-22-33_RPi5_output.txt  fl_info_2025-03-27_10-22-38_Jetson_output.txt  fl_info_2025-03-27_10-23-35_jetson.txt  fl_info_2025-03-27_10-23-35_severe.txt  fl_info_2025-03-27_13-46-27_jetson.txt  fl_info_2025-03-27_13-48-07_jetson.txt  fl_info_2025-03-27_13-48-09_RPi5.txt  fl_info_2025-03-27_13-49-09_jetson.txt  fl_info_2025-03-27_13-49-15_RPi5.txt  fl_info_2025-03-27_13-49-50_jetson.txt  fl_info_2025-03-27_13-49-52_RPi5.txt  fl_info_2025-03-27_13-50-55_jetson.txt  fl_log_2025-03-27_10-23-35.txt  fl_log_2025-03-27_13-46-30.txt  fl_log_2025-03-27_13-48-07.txt  fl_log_2025-03-27_13-48-09.txt  fl_log_2025-03-27_13-49-09.txt  fl_log_2025-03-27_13-49-50.txt  power_RPi5_1743083010.723834.csv  power_RPi5_1743083112.403173.csv  power_RPi5_1743083377.2468994.csv  power_RPi5_1743083480.768445.csv  power_jetson_1743083006.4033034.csv  power_jetson_1743083370.3439815.csv
e2fl/20250327_2312/: 20250328_jetson_1.txt  20250328_rpi5_1.txt  20250328_server1_1.txt  20250328_server2_1  fl_info_2025-03-27_14-07-29_jetson.txt  fl_info_2025-03-27_14-07-31_RPi5.txt  fl_info_2025-03-27_14-08-25_jetson.txt  fl_info_2025-03-27_14-08-30_RPi5.txt  fl_info_2025-03-27_14-09-03_jetson.txt  fl_info_2025-03-27_14-09-04_RPi5.txt  fl_info_2025-03-27_14-10-05_jetson.txt  fl_info_2025-03-27_14-10-08_RPi5.txt  fl_info_2025-03-27_14-10-43_RPi5.txt  fl_info_2025-03-27_14-10-43_jetson.txt  fl_info_2025-03-27_14-11-48_jetson.txt  fl_info_2025-03-27_14-11-51_RPi5.txt  fl_log_2025-03-27_14-07-29.txt  fl_log_2025-03-27_14-07-31.txt  fl_log_2025-03-27_14-08-25.txt  fl_log_2025-03-27_14-08-30.txt  fl_log_2025-03-27_14-09-03.txt  fl_log_2025-03-27_14-09-04.txt  fl_log_2025-03-27_14-10-05.txt  fl_log_2025-03-27_14-10-08.txt  fl_log_2025-03-27_14-10-43.txt  fl_log_2025-03-27_14-11-48.txt  fl_log_2025-03-27_14-11-51.txt  power_RPi5_1743084530.4378495.csv  power_RPi5_1743084629.2471502.csv  power_RPi5_1743084732.2386537.csv  power_jetson_1743084525.9564037.csv  power_jetson_1743084625.8585405.csv  power_jetson_1743084728.8985038.csv
e2fl/20250327_2337/: 20250328_jetson_1.txt  20250328_rpi5_2.txt  20250328_server1_2.txt  20250328_server2_2.txt  fl_info_2025-03-27_14-32-17_RPi5.txt  fl_info_2025-03-27_14-32-18_jetson.txt  fl_info_2025-03-27_14-33-11_jetson.txt  fl_info_2025-03-27_14-33-12_RPi5.txt  fl_info_2025-03-27_14-33-43_jetson.txt  fl_info_2025-03-27_14-33-46_RPi5.txt  fl_info_2025-03-27_14-34-47_jetson.txt  fl_info_2025-03-27_14-34-49_RPi5.txt  fl_info_2025-03-27_14-35-21_jetson.txt  fl_info_2025-03-27_14-35-23_RPi5.txt  fl_info_2025-03-27_14-36-27_jetson.txt  fl_info_2025-03-27_14-36-29_RPi5.txt  fl_log_2025-03-27_14-32-17.txt  fl_log_2025-03-27_14-32-18.txt  fl_log_2025-03-27_14-33-11.txt  fl_log_2025-03-27_14-33-12.txt  fl_log_2025-03-27_14-33-43.txt  fl_log_2025-03-27_14-33-46.txt  fl_log_2025-03-27_14-34-47.txt  fl_log_2025-03-27_14-34-49.txt  fl_log_2025-03-27_14-35-21.txt  fl_log_2025-03-27_14-35-23.txt  fl_log_2025-03-27_14-36-27.txt  fl_log_2025-03-27_14-36-29.txt
e2fl/20250327_3/: 20250327_jetson_3.txt  20250327_rpi5_3.txt  20250327_server1_3.txt  20250327_server2_3.txt  fl_info_2025-03-27_14-43-58_jetson.txt  fl_info_2025-03-27_14-44-01_RPi5.txt  fl_info_2025-03-27_14-44-58_jetson.txt  fl_info_2025-03-27_14-45-00_RPi5.txt  (+26 more)
(+1058 files in other folders)
