[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "E2FL"
version = "1.0.0"
description = "Federated AI with Embedded Devices using Flower"
license = "Apache-2.0"
dependencies = [
    "flwr>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build]
exclude = [
    "datasets/*", # Exclude datasets from FAB (if generated in this directory)
    "_static/*", # Exclude images in README from FAB
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "E2FL.server_app:app"
clientapp = "E2FL.client_app:ap

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
min-clients = 2
local-epochs = 1
learning-rate = 0.1
batch-size = 32

[tool.flwr.federations]
default = "E2FL"

[tool.flwr.federations.E2FL]
address = "192.168.0.17:8080"
insecure = true
